# fab

./: .gitignore  LICENSE  Makefile  README.md  export.html  exporter.js  geneve.html  html-to-pdf.html  index.html  main.js  pdf-editor.html  style.css  styles.css  viewer.js
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: Cargo.toml  README.md
backend/src/: app.rs  lib.rs  main.rs  types.rs
backend/src/pdf/: content.rs  extract.rs  loader.rs  mod.rs  patch.rs  write.rs
backend/src/pdf/fonts/: embed.rs  mod.rs  shape.rs  subset.rs
backend/src/util/: bbox.rs  matrix.rs
backend/tests/: http_open_ir_patch.rs  schema_validation.rs
e2e/: tests.http
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: api.ts  coords.ts  fabricOverlay.ts  main.ts  mapping.ts  pdfPreview.ts  styles.css  styles.ts  types.ts
frontend/tests/: api.spec.ts  api.test.ts  coords.spec.ts  coords.test.ts  dom-stub.ts  fabricOverlay.spec.ts  fabricOverlay.test.ts  loader.mjs  mapping.spec.ts  mapping.test.ts  node-globals.d.ts  pdfPreview.spec.ts  pdfPreview.test.ts  run-vitest.mjs  schema.spec.ts  vitest-shim.d.ts  vitest-shim.mjs  vitest.setup.ts
frontend/tests/__fixtures__/: sampleIr.ts
frontend/tests/fixtures/: ir.sample.json  patch.sample.json
frontend/tests/mocks/: fabric.ts  pdfjs-dist.ts
pdf-editor/: .gitignore  LICENSE  README.md
pdf-editor/backend/: Cargo.toml  README.md
pdf-editor/backend/src/: main.rs  types.rs
pdf-editor/backend/src/pdf/: content.rs  extract.rs  loader.rs  mod.rs  patch.rs  write.rs
pdf-editor/backend/src/pdf/fonts/: embed.rs  mod.rs  shape.rs  subset.rs
pdf-editor/backend/src/util/: bbox.rs  matrix.rs  mod.rs
pdf-editor/e2e/: README.md  tests.http
pdf-editor/frontend/: README.md  index.html  package.json  styles.css  tsconfig.base.json  tsconfig.json  tsconfig.node.json  vite.config.ts
pdf-editor/frontend/src/: api.ts  coords.ts  fabricOverlay.ts  main.ts  mapping.ts  pdfPreview.ts  pdfjs.d.ts  styles.css  types.ts
pdf-editor/shared/: README.md
pdf-editor/shared/schema/: ir.schema.json  patch.schema.json
scripts/: exporter.js  html-to-pdf.js
shared/schema/: ir.schema.json  patch.schema.json
styles/: html-to-pdf.css
