[package]
name = "pdf-editor-backend"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
lopdf = "0.32"
lazy_static = "1"
