[package]
name = "pdf-editor-backend"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json", "multipart"] }
axum-extra = { version = "0.9", features = ["either"] }
base64 = "0.21"
lazy_static = "1"
lopdf = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
