[package]
name = "pdf-editor-backend"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
lopdf = "0.31"
hashbrown = "0.14"
uuid = { version = "1.6", features = ["v4", "serde"] }
parking_lot = "0.12"
base64 = "0.22"
time = "0.3"

[dev-dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
