[package]
name = "pdf-editor-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
anyhow = "1.0"
lopdf = "0.32"
harfbuzz = { package = "harfbuzz", version = "0.6" }
ttf-parser = "0.20"
lazy_static = "1.4"
base64 = "0.22"
bytes = "1.5"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.6", features = ["v4"] }
