[package]
name = "pdf-editor-backend"
version = "0.1.0"
edition = "2021"
authors = ["PDF Editor Contributors"]
license = "Apache-2.0"
description = "Axum backend for a vector-preserving PDF editor"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lopdf = { version = "0.32", default-features = false }
harfbuzz = { version = "0.6", package = "harfbuzz_rs" }
ttf-parser = "0.19"
bytes = "1"
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
lazy_static = "1"
base64 = "0.22"
futures = "0.3"

[dev-dependencies]
serde_json = "1"
